<resources>
    <string name="app_name">Reskrim Cimahi</string>
    <string name="app_registration">Registrasi</string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="section_format_str">Hello World from section: %1$s</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_new_case">Kasus Baru</string>
    <string name="search_case">Cari Kasus</string>
    <string name="app_case_detail">Detail Kasus</string>
    <string name="app_edit_case">Perbarui Kasus</string>

    <string name="progress">Progress</string>
    <string name="penyidik">Penyidik</string>
    <string name="lp">LP</string>
    <string name="perkara">Perkara</string>
    <string name="uraian">Uraian</string>
    <string name="kasus_dimulai">Kasus Dimulai</string>
    <string name="pelapor">Pelapor</string>
    <string name="terlapor">Terlapor</string>
    <string name="spdp">SPDP</string>
    <string name="hambatan">Hambatan</string>
    <string name="keterangan">Keterangan</string>

    <string name="snack_bar_action">TOP</string>

    <string name="personnel_upload">Unggah Gambar</string>
    <string name="personnel_name">Nama Lengkap</string>
    <string name="personnel_nrp">NRP</string>
    <string name="personnel_rank">Pangkat</string>
    <string name="personnel_position">Jabatan</string>
    <string name="personnel_phone">Telepon</string>
    <string name="personnel_desc">Deskripsi</string>
    <string name="personnel_is_inv">Penyidik</string>
    <string name="radio_button_inv_t">Ya</string>
    <string name="radio_button_inv_f">Tidak</string>
</resources>



